0.9.7.2
* Added SSL support for future version of mongodb (EXPERIMENTAL)
	* pass in the ssl:true option to the server or replicaset server config to enable
	* a bug either in mongodb or node.js does not allow for more than 1 connection pr server.
* Added getTimestamp() method to objectID that returns a date object
* Added finalize function to collection.group
	* function group (keys, condition, initial, reduce, finalize, command, callback)
* Reaper no longer using setTimeout to handle reaping. Triggering is done in the general flow leading to predictable behavior.
	* reaperInterval, set interval for reaper (default 10000 miliseconds)
	* reaperTimeout, set timeout for calls (default 30000 miliseconds)
	* reaper, enable/disable reaper (default false)
* Work around for issues with findAndModify during high concurrency load, insure that the behavior is the same across the 1.8.X branch and 2.X branch of MongoDb

0.9.7.1-2 2011-11-27
* Set statistical selection strategy as default for secondary choice.

0.9.7.1-1 2011-11-27
* Better handling of single server reconnect (fixes some bugs)
* Better test coverage of single server failure
* Correct handling of callbacks on replicaset servers when firewall dropping packets, correct reconnect

0.9.7.1 2011-11-24
* Better handling of dead server for single server instances
* FindOne and find treats selector == null as {}, Issue #403
* Possible to pass in a strategy for the replicaset to pick secondary reader node 
	* parameter strategy
		* ping (default), pings the servers and picks the one with the lowest ping time
		* statistical, measures each request and pick the one with the lowest mean and std deviation
* Set replicaset read preference replicaset.setReadPreference()
	* Server.READ_PRIMARY (use primary server for reads)
	* Server.READ_SECONDARY (from a secondary server (uses the strategy set))
	* tags, {object of tags}
* Added replay of commands issued to a closed connection when the connection is re-established